2018-June-16 [slanska]

* Upgraded SQLite sources to 3.24.0
* Added LSQLITE_EXTENSION conditonal define to be used in SQLite extensions

2016-November-13

Version "0.9.4"

Since the "0.9.3-devel" release of this Lua library...

Add functions db:get_ptr() and sqlite3.open_ptr(db_ptr) to pass a db connection between threads.
Add function db:db_filename(name).
Update sqlite3_open to sqlite3_open_v2 and add open flags constants.
Thanks to Wolfgang Oertl!

Added second module 'lsqlite3complete' that statically links sqlite.c. Continue to use 
'lsqlite3' for dynamic linking to 'sqlite3.so' or 'sqlite3.dll'.

Added Online Backup API

Added unit tests for NULs in BLOBs and TEXT columns. (Refute defect report.)

Use lua_createtable() in lieu of lua_newtable() when number of table elements is known.
This will improve performance.
Thanks to Egil Hjelmeland for the suggestion.

2015-January-06

Version "0.9.3"

Since the "0.9.2-devel" release of this Lua library...

Added lversion() function to report library version, "0.9.3".

Added db:load_extension() function to support SQLite extension libraries.

Added some tests for new funcitons and Lua 5.3 64-bit integers in the database.

Fixed longstanding bug: if db is no longer live, it is auto-closed by gc, but there may still
be live prepared statements. Executing these statements would produce an error. Prepared 
statements now hold a reference to the db to prevent it from being collected while the prepared 
statement is live. Manually closing the db will continue to finalize the statements, as before.

Fixed bug in PUSH_INT64 macro for Lua < 5.3 introduced in version 0.9.2-devel.

2015-January-04

Version "0.9.2-devel"

Since the "0.9.1-devel" release of this Lua library...

Lua 5.3 compatibility (backward compatible with Lua 5.2 and Lua 5.1.5).

Finally uses sqlite3_prepare_v2() to preserve detailed error codes in statement stepping

With Lua 5.3, 64-bit integer database values are supported for reading and writing columns; 